--- a/public/stylesheets/less/style.less
+++ b/public/stylesheets/less/style.less
@@ -115,7 +115,8 @@ body{
     position:fixed;
     z-index:20;
     top:152px;
-    right:35px;
+    right:0;
+    margin-right:30px;
 
     .continue-bubble{
         .bubble(#00cc3e);
