cleaned up create form interactions so textarea would do highlight map and clicking the map would return to the text area for editing

--- a/views/create-conflict.html
+++ b/views/create-conflict.html
@@ -36,6 +36,7 @@
     <form id="create-conflict-form" enctype="multipart/form-data">
         <input type="file" name="conflicted_file" id="conflicted-file" />
         <textarea>Select a conflicted file above or paste your conflicted code here to get started</textarea>
+        <div id="diffs-overview"></div>
 
         <div id="submit-box">
             <div class="continue-bubble">
