--- a/views/create-conflict.html
+++ b/views/create-conflict.html
@@ -1,5 +1,6 @@
 <script type="text/template" id="diffs-overview-template">
-    <div id="diffs-overview" class="">
+<% console.log(active_diff); %>
+    <div id="diffs-overview" class="mergemap <% if (active_diff > -1){ %>faded<% } %>">
         <% _.each(mergeTemplate.lines(), function(line, num){ %>
             <% linenum = num + 1 %>
 
@@ -7,7 +8,7 @@
                 <% diff_index = parseInt(line.replace('{diff-', '').replace('}', '')); %>
                 <% diff = mergeTemplate.get('differences').at(diff_index); %>
 
-                <div class="conflict-container" id="conflict-container-<%=num%>">
+                <div class="conflict-container <% if (active_diff == diff_index){ %>active<% } %>" id="conflict-container-<%=num%>">
                     <% _.each(diff.get('left').lines(), function(l, n){ %>
                         <div class="line conflicted left">
                             <div class="linenum"><%=linenum%></div>
