--- a/views/diff-templates.html
+++ b/views/diff-templates.html
@@ -8,7 +8,7 @@
     </div>
     <div class="row-fluid">
         <div class="diff">
-            <div class="span6">
+            <div class="span5">
                 <div id="left" class="source">
                     <% diff = active_diff.get('left'); %>
 
@@ -22,7 +22,10 @@
                     </div>
                 </div>
             </div>
-            <div class="span6">
+            <div class="span2">
+                <div class="mergemap minimap" id="minimap"></div>
+            </div>
+            <div class="span5">
                 <div id="right" class="source">
                     <% diff = active_diff.get('right'); %>
 
