mimicked step1 box on sides of select diff boxes

--- a/public/stylesheets/less/style.less
+++ b/public/stylesheets/less/style.less
@@ -46,16 +46,52 @@ body{
         }
     }
 
-    .select-diff-bubble{
-        .bubble(#1b3944);
-        margin-left:14%;
-        top:72px;
-        position:fixed;
-        z-index:10;
-        width:300px;
+    .bubble-container{
+        position:absolute;
+    }
 
-        a{
+    .select-diff-bubble{
+        .bubble(#00cc3e);
+        position:relative;
+        float:right;
+        z-index:25;
+        text-align:left;
+        padding:5px 10px 0;
+        background-color:#1570a6;
+        margin-right:-16px;
+
+        .tip{
+            float:right;
+            bottom:-10px;
+            border-right-width:16px;
+            border-top-width:10px;
+            border-top-color:#222;
+            border-left-width:0;
+            margin-right:-10px;
+            left:0;
+        }
+
+        .submit{
+            padding:2px 18px;
             color:#fff;
+            margin:10px 0 0;
+            font-size:18px;
+            display:block;
+            text-align:center;
+            background-color:#22bb54;
+            border:1px solid #36da6b;
+        }
+
+        &.hang-left{
+            float:left;
+            margin-left:-16px;
+
+            .tip{
+                float:left;
+                margin-left:-10px;
+                border-right-width:0;
+                border-left-width:16px;
+            }
         }
     }
 
