updating formatting of select-diff-bubbles and adding hover event to fade it out, also click event so it can select side

--- a/public/stylesheets/less/style.less
+++ b/public/stylesheets/less/style.less
@@ -59,6 +59,14 @@ body{
         padding:5px 10px 0;
         background-color:#1570a6;
         margin-right:-16px;
+        color:#f9f9f9;
+        cursor:pointer;
+
+        p.small{
+            font-size:15px;
+            line-height:17px;
+            color:#fff;
+        }
 
         .tip{
             float:right;
@@ -218,14 +226,6 @@ body{
     }
     .syntaxhighlighter .line.highlighted.alt1, .syntaxhighlighter .line.highlighted.alt2 {
       //background-color: #323e41 !important;
-    }
-
-    .select-diff-bubble{
-        background-color:#222;
-
-        .tip{
-            border-top-color:#222;
-        }
     }
 }
 
