finally handled no conflicts being found with messaging to user

--- a/views/create-conflict.html
+++ b/views/create-conflict.html
@@ -41,7 +41,7 @@
 
         <div id="submit-box">
             <div class="continue-bubble">
-                Nice! Not bad lookin' code.
+                <span></span>
 
                 <a href="#" class="submit">Continue</a>
                 <div class="tip"></div>
